assets/azhar.css
/*************global css*****************/
@font-face {
  font-family: lustria;
  src: url("https://cdn.shopify.com/s/files/1/0637/0836/4884/files/Lustria-Regular.ttf?v=1748753234");
}
.page-width {
  max-width: 100% !important;
}
/*********custom header section css************/
button.toggle_btn {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
  position: relative;
  display: none;
}

.custom_header_wrapper {
  display: grid;
  align-items: center;
  grid-template-columns: 1fr 1fr 1fr;
}

a.custom_header_logo,
.custom_header_logo img {
  display: block;
}

.right_grid_item {
  display: flex;
  justify-content: end;
}

a.btn.primary_btn_yellow {
  position: relative;
  display: inline-block;
  align-items: center;
  gap: 20px;
  font-size: 16px;
  text-transform: uppercase;
  text-decoration: none;
  background: #fff544;
  padding: 11px 50px;
  color: #000;
  overflow: hidden;
  transition: color 0.3s ease;
  z-index: 2;
}


a.btn.primary_btn_yellow:hover {
  color: #fff;
  background-color: #000;
}

a.btn.primary_btn_yellow:hover img {
  filter: brightness(0) invert(1);
}

a.primary_btn_yellow img {
  transition: filter 0.3s ease;
}

.custom_header_text p {
  text-align: center;
}

.navbar-items {
  display: none;
  width: 100%;
  padding: 20px 0;
}
img.times_icon {
  display: none;
}

/*********Banner Hero section css************/
a.button_black.mobile_visible {
  display: none;
}
.banner_section_wrapper {
  min-height: 75vh;
  /* display: flex;
    align-items: center; */
  position: relative;
  overflow: hidden;
}
.banner_image_container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.banner_image_container img {
  width: 100%;
}
.banner_image_container .mobile_image {
  display: none;
}
.banner_image_container .desktop_image {
  display: block;
}

.banner_content {
  position: absolute;
  bottom: 65px;
  left: 20px;
  padding: 20px 32px;
  z-index: 10;
  max-width: 550px;
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 30px;
}
.banner_content .banner_title {
  font-size: 70px;
  font-weight: 500;
  margin: 0;
}
.banner_descriptoin p {
  font-size: 20px;
  line-height: 1.4;
  margin: 0;
}
a.button_black {
  font-size: 16px;
  text-transform: uppercase;
  text-decoration: none;
  background: #000;
  padding: 11px 50px;
  color: #fff;
  display: inline-block;
  margin-top: 10px;
  position: relative;
  overflow: hidden;
  transition: all 0.5s ease;
  z-index: 2;
  cursor: pointer;
}
a.button_black:hover {
  color: #000;
  background-color: #fff544;
}

a.button_black:hover img {
  filter: invert(1);
}

a.button_black img {
  transition: filter 0.3s ease;
}
div.bottom_text {
  font-size: 16px;
  text-align: center;
  background: #f8f8f8;
  margin: 0;
  padding: 3px 0;
}
/*************Product custom grid*******************/
.product_grid_header h2 {
  font-size: 36px;
  font-family: lustria;
}
.product_grid_wrapper {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
}
.product_grid_item {
  cursor: pointer;
  min-height: 440px;
  overflow: hidden;
}
.product_grid_item img {
  object-fit: cover;
  width: 100%;
  height: 100%;
  -webkit-transition: all 0.5s ease;
-moz-transition: all 0.5s ease;
-ms-transition: all 0.5s ease;
-o-transition: all 0.5s ease;
transition: all 0.5s ease;
}
.product_grid_item:hover img {
  -moz-transform: scale(1.1);
-webkit-transform: scale(1.1);
-o-transform: scale(1.1);
-ms-transform: scale(1.1);
transform: scale(1.1);
}

.popup-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.1);
  display: flex;
  justify-content: center;
  align-items: center;
  opacity: 0;
  visibility: hidden;
  z-index: 99;
  transition: all 0.3s ease;
}
.popup-overlay.active {
  opacity: 1;
  visibility: visible;
}
.popup-content {
  background: white;
  max-width: 425px;
  width: 90%;
  max-height: 90vh;
  overflow-y: auto;
  position: relative;
  transition: all 0.3s ease;
  padding: 40px 15px;
}
button.popup-close {
  position: absolute;
  top: 15px;
  right: 20px;
  background: none;
  border: none;
  cursor: pointer;
}
button.popup-close img {
  width: 12px;
}
.pop-content-wrapper {
  display: grid;
  grid-template-columns: 40% 1fr;
  gap: 15px;
}
img.pop-product-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.product-info h3 {
  font-size: 16px;
  font-weight: 300;
}
.product-info h5 {
  font-size: 16px;
  font-weight: 400;
  font-family: lustria;
  margin: 8px 0 0 0;
}
.popup-product-description p {
  line-height: 1.4;
}
.variant-box {
  display: flex;
  flex-direction: column-reverse;
}
.color-swatches {
  display: flex;
}
.color-swatch {
  font-size: 18px;
  cursor: pointer;
  position: relative;
  display: flex;
  border: 1px solid #000;
  border-left: none;
  flex: 1;
  padding: 5px 14px;
}

.color-swatch:hover {
  background: #000;
  color: #fff;
}
.color-swatch.color-active {
  background: #000;
  color: #fff;
}
.color-swatch::before {
  content: "";
  position: absolute;
  background: transparent;
  border: 1px solid #000;
  top: -1px;
  left: -6px;
  width: 6px;
  height: calc(100% + 2px);
}
.variant-section.color-variant p,
.variant-section.size-variant p {
  margin-bottom: 3px;
}
/*********custom selection dropdown***********/
.custom-dropdown {
  position: relative;
  width: 100%;
  cursor: pointer;
}
.custom-dropdown::before {
  content: "";
  position: absolute;
  height: 100%;
  width: 1px;
  background: #000;
  right: 60px;
}
.custom-dropdown:after {
  content: "";
  background-image: url(/cdn/shop/files/Vector.png?v=1748579846);
  position: absolute;
  background-image: url(https://cdn.shopify.com/s/files/1/0637/0836/4884/files/Vector.png?v=1748579846);
  background-repeat: no-repeat;
  width: 20px;
  height: 20px;
  top: 60%;
  transform: translateY(-50%);
  right: 18px;
  display: block;
}
.selected-option {
  padding: 5px 14px;
  border: 1px solid #000;
  background: #fff;
  color: #000;
}
.selected-option.selected {
  color: #000;
}
.options {
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  background: #fff;
  border: 1px solid #000;
  border-top: none;
  z-index: 10;
  height: auto;
  overflow-y: auto;
}
.custom-dropdown.active .options {
  display: block;
}
.option {
  padding: 10px;
  transition: all.3s ease;
  cursor: pointer;
}
.option:hover {
  background-color: #000;
  color: #fff;
}
.add-to-cart-btn {
  font-size: 16px;
  text-transform: uppercase;
  text-decoration: none;
  background: #000;
  border: none;
  padding: 11px 28px;
  color: #fff;
  display: flex;
  margin-top: 30px;
  align-items: center;
  justify-content: center;
  width: 100%;
  font-family: jost;
  position: relative;
  overflow: hidden;
  z-index: 2;
}
.add-to-cart-btn::before {
  content: "";
  position: absolute;
  top: -100%;
  left: 0;
  width: 100%;
  height: 100%;
  background: #fff544;
  color: #000;
  transition: top 0.3s ease;
  z-index: -1;
}
.add-to-cart-btn:hover::before {
  top: 0;
}

.add-to-cart-btn:hover {
  color: #000;
}

.add-to-cart-btn:hover img {
  filter: invert(1);
}

.add-to-cart-btn img {
  transition: filter 0.3s ease;
}
.add-to-cart-btn img {
  width: 33px;
  height: auto;
  position: relative;
  right: -60px;
}
/***********************************
========================================================================================================================================
MEDIA QUERIES CSS
========================================================================================================================================
**************************************/
@media (min-width: 2500px) {
  /***********custom header section***************/
  a.custom_header_logo,
  .custom_header_logo img {
    display: block;
    width: 400px;
  }
  .custom_header_text p {
    text-align: center;
    font-size: 42.67px;
  }
  a.btn.primary_btn_yellow {
    font-size: 42.76px;
    padding: 20px 98px;
  }
  a.primary_btn_yellow img {
    width: 65px;
  }
  /**********banner section*****************/
  .banner_content {
    max-width: 1200px;
    left: 60px;
  }
  .banner_content .banner_title {
    font-size: 165px;
  }
  .banner_descriptoin p {
    font-size: 47px;
  }
  a.button_black {
    font-size: 37px;
    padding: 20px 120px;
  }
  a.button_black.desktop_visible img {
    width: 60px;
  }
  div.bottom_text {
    font-size: 26px;
    text-align: center;
    background: #f8f8f8;
    margin: 0;
    padding: 3px 0;
  }
}
@media (min-width: 2200px) {
  .banner_section_wrapper {
    min-height: 120dvh;
  }
}
@media (min-width: 1900px) {
  /*********Banner Hero section css************/
  .banner_image_container img {
    width: 100%;
    height: 100%;
  }
}
@media (min-width: 1024px) and (max-width: 1300px) {
  /*********Banner Hero section css************/
  .banner_content {
    max-width: 440px;
  }
  .banner_content .banner_title {
    font-size: 35px;
  }
}
@media (max-width: 1024px) {
  /*********Banner Hero section css************/
  .banner_content {
    max-width: 410px;
  }
  .banner_content .banner_title {
    font-size: 30px;
  }
}
@media (max-width: 922px) {
  /*************Product custom grid*******************/
  .product_grid_wrapper {
    grid-template-columns: repeat(2, 1fr);
  }
  .product_grid_header h2 {
    text-align: center;
  }
}
@media (max-width: 768px) {
  /*********custom header section css************/
  .custom_header_wrapper {
    padding: 13px 0;
  }
  button.toggle_btn {
    display: flex;
  }
  button.toggle_btn.active .hamburger_icon {
    display: none;
  }
  button.toggle_btn.active .times_icon {
    display: block;
  }
  .navbar-items.active {
    display: block;
    text-align: center;
  }
  .right_grid_item,
  .custom_header_text {
    display: none;
  }
  a.custom_header_logo img {
    margin: 0 auto;
  }
  /*********Banner Hero section css************/
  .banner_section_wrapper {
    min-height: 500px;
  }
  .banner_content {
    position: static;
    padding: 50px 60px 0 50px;
    max-width: 100%;
    text-align: center;
    align-items: center;
  }
  .banner_image_container {
    position: static;
  }
  a.button_black.desktop_visible {
    display: none;
  }
  a.button_black.mobile_visible {
    display: inline-block;
    position: absolute;
    bottom: 75px;
    left: 50%;
    transform: translateX(-50%);
  }
  img.banner_image.mobile_image {
    display: block;
  }
  img.banner_image.desktop_image {
    display: none;
  }
  /*************Product custom grid*******************/
  .product_grid_custom .page-width {
    padding: 0 20px !important;
  }
  .product_grid_wrapper {
    gap: 10px;
  }
  .product_grid_item {
    min-height: 190px;
  }
  .product_grid_header h2 {
    font-size: 24px;
  }
}

